--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:text="Who is the 44th President of the United States?"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-
+        android:background="@drawable/card_background"
+        android:elevation="5dp"
         android:textSize="40sp"
 
         />
@@ -27,6 +28,58 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:textSize="40sp"
+        android:visibility="invisible"
+        android:background="@color/colorAccent"
+
+        />
+    <TextView
+        android:id="@+id/choice1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@id/question"
+        android:text="Bill Clinton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:textSize="40sp"
+        android:background="@color/Maroon"
+
+        />
+    <TextView
+        android:id="@+id/choice2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="George H.W Bush"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:textSize="40sp"
+        android:background="@color/Maroon"
+        android:layout_below="@id/choice1"
+        />
+    <TextView
+        android:id="@+id/choice3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Barack obama"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:textSize="40sp"
+        android:background="@color/Maroon"
+        android:layout_below="@id/choice2"
+
+        />
+
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="40dp"
+        android:id="@+id/toggle_choices_invisibility"
+        android:src="@drawable/hiddeneye"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="60dp"
         android:visibility="invisible"
 
         />
