--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:text="Who is the 44th President of the United States?"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:background="@drawable/card_background"
         android:elevation="5dp"
         android:textSize="40sp"
 
@@ -26,10 +25,9 @@
          android:gravity="center"
         android:text="Barack obama"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:textSize="40sp"
         android:visibility="invisible"
-        android:background="@color/colorAccent"
 
         />
     <TextView
@@ -40,9 +38,10 @@
         android:layout_below="@id/question"
         android:text="Bill Clinton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:textSize="40sp"
         android:background="@color/Maroon"
+        android:visibility="invisible"
 
         />
     <TextView
@@ -52,10 +51,11 @@
         android:gravity="center"
         android:text="George H.W Bush"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:textSize="40sp"
         android:background="@color/Maroon"
         android:layout_below="@id/choice1"
+        android:visibility="invisible"
         />
     <TextView
         android:id="@+id/choice3"
@@ -64,23 +64,22 @@
         android:gravity="center"
         android:text="Barack obama"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:textSize="40sp"
         android:background="@color/Maroon"
         android:layout_below="@id/choice2"
+        android:visibility="invisible"
 
         />
 
     <ImageView
-        android:layout_width="90dp"
-        android:layout_height="40dp"
-        android:id="@+id/toggle_choices_invisibility"
-        android:src="@drawable/hiddeneye"
-        android:gravity="center"
+        android:id="@+id/addbutton"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_alignLeft="@id/choice3"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:visibility="invisible"
-
-        />
+        android:layout_marginLeft="-57dp"
+        android:layout_marginBottom="26dp"
+        android:src="@drawable/addbtn" />
 </RelativeLayout>
