--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/question"
+        android:background="@drawable/card_background"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:gravity="center"
